# jvm-classpath-validator

./: .cirrus.yml  .gitignore  README.md  WORKSPACE  classpath_validator.bzl  dependencies.bzl  maven_install.json
example/: README.md
example/a/com/example/duppy/: BUILD.bazel  Duppy.java
example/b/com/example/duppy/: Duppy.java
example/c/com/example/consumer/: BUILD.bazel  Consumer.java
src/main/com/bazelbuild/java/classpath/: BUILD.bazel  ClassPathValidator.java  ClasspathCollision.java  ClasspathEntries.java  ClasspathValidatorArguments.java  ClasspathValidatorCli.java  ClasspathValidatorJarInput.java  MiniJarEntry.java
src/test/com/bazelbuild/java/classpath/: BUILD.bazel  ClassPathValidatorIT.java  ClassPathValidatorTestingUtils.java  ClasspathEntries.java  ClasspathEntriesTest.java  ClasspathValidatorArgumentsTest.java  ClasspathValidatorCliIT.java  DummyFileEntry.java  MiniJarEntry.java
