load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("//:classpath_validator.bzl", "classpath_collision_test")

java_library(
    name = "consumer",
    srcs = ["Consumer.java"],
    deps = [
        "//example/a/com/example/duppy",
        "//example/b/com/example/duppy",
    ],
)

java_binary(
    name = "consumer_run",
    main_class = "com.example.consumer.Consumer",
    runtime_deps = [":consumer"],
)

classpath_collision_test(
    name = "test_classpath",
    target = "consumer",
)
