load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "classpath",
    srcs = glob(["*.java"]),
    deps = [
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "//src/main/com/bazelbuild/java/classpath:classpath",
    ],
)

java_test(
    name = "classpathEntries",
    test_class = "com.bazelbuild.java.classpath.ClasspathEntriesTest",
    runtime_deps = [
        ":classpath",
    ],
)
