load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "classpath",
    srcs = glob(["*.java"]),
    deps = [
        "//src/main/com/bazelbuild/java/classpath",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
    ],
)

java_test(
    name = "classpathEntries",
    test_class = "com.bazelbuild.java.classpath.ClasspathEntriesTest",
    runtime_deps = [
        ":classpath",
    ],
)

java_test(
    name = "classPathValidatorIT",
    test_class = "com.bazelbuild.java.classpath.ClassPathValidatorIT",
    runtime_deps = [
        ":classpath",
    ],
)

java_test(
    name = "ClasspathValidatorCliIT",
    test_class = "com.bazelbuild.java.classpath.ClasspathValidatorCliIT",
    runtime_deps = [
        ":classpath",
    ],
)

java_test(
    name = "classpathValidatorArguments",
    test_class = "com.bazelbuild.java.classpath.ClasspathValidatorArgumentsTest",
    runtime_deps = [
        ":classpath",
    ],
)
